[package]
name = "boa_ffi"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boa_engine = { workspace = true }

[build-dependencies]
cbindgen = "0.24.3"

[lib]
crate-type = ["cdylib"]
