[package]
name = "boa_gc"
description = "Garbage collector for the Boa JavaScript engine."
keywords = ["javascript", "js", "garbage", "memory"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_profiler.workspace = true
boa_gc_macros = { path = "derive_macros", version = "0.16.0" }

# Optional Dependencies
measureme = { version = "10.1.0", optional = true }
