[package]
name = "boa_gc"
description = "Garbage collector for the Boa JavaScript engine."
keywords = ["javascript", "js", "garbage", "memory"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_profiler.workspace = true
boa_macros.workspace = true
