[package]
name = "boa_gc"
description = "Garbage collector for the Boa JavaScript engine."
keywords = ["javascript", "js", "garbage", "memory"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Enable default implementatio of trace and finalize thin-vec crate
thinvec = ["thin-vec"]

[dependencies]
boa_profiler.workspace = true
boa_macros.workspace = true

thin-vec = { version = "0.2.12", optional = true }
hashbrown = { version = "0.14.0", features = ["raw"] }
