[package]
name = "boa_icu_provider"
description = "ICU4X data provider for the Boa JavaScript engine."
keywords = ["javascript", "cldr", "unicode"]
categories = ["internationalization", "no-std"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_provider = { version = "1.2.0", features = ["serde", "sync"] }
icu_collections = "1.2.0"
icu_normalizer = "1.2.0"
icu_properties = "1.2.0"
zerovec = "0.9.4"

icu_datagen = { version = "1.2.5", optional = true }
icu_provider_blob = { version = "1.2.0", optional = true }
icu_provider_adapters = { version = "1.2.0", features = ["serde"], optional = true }
once_cell = { version = "1.18.0", default-features = false, features = [
    "critical-section",
], optional = true }
log = { version = "0.4.20", optional = true }
simple_logger = { version = "4.2.0", optional = true }
icu_casemapping = { version = "0.7.2", optional = true }

[features]
default = ["std"]
full = ["dep:once_cell", "dep:icu_provider_blob", "dep:icu_provider_adapters"]
std = ["once_cell?/std"]
bin = ["dep:icu_datagen", "dep:simple_logger", "dep:log", "dep:icu_casemapping"]

[[bin]]
name = "boa-datagen"
path = "src/bin/datagen.rs"
required-features = ["bin"]
