[package]
name = "boa_icu_provider"
description = "ICU4X data provider for the Boa JavaScript engine."
keywords = ["javascript", "cldr", "unicode"]
categories = ["internationalization", "no-std"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
icu_provider = { workspace = true, features = ["serde", "sync"] }
icu_provider_blob = { workspace = true, features = ["export"] }
icu_provider_adapters = { workspace = true, features = ["serde"] }
once_cell = { workspace = true, default-features = false, features = ["critical-section"] }

icu_datagen = { workspace = true, optional = true, features = ["networking"] }
log = { version = "0.4.20", optional = true }
simple_logger = { version = "4.2.0", optional = true }

[features]
default = ["std"]
std = ["once_cell/std"]
bin = ["dep:icu_datagen", "dep:simple_logger", "dep:log"]

[[bin]]
name = "boa-datagen"
path = "src/bin/datagen.rs"
required-features = ["bin"]
