[package]
name = "boa_inputgen"
authors = ["Addison Crump <me@addisoncrump.info>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
spin = "0.9"
string-interner = "*"

[dependencies.arbitrary]
version = "1"
features = ["derive"]

[dependencies.boa_engine]
path = "../boa_engine"
features = ["fuzzer"]

[dependencies.boa_interner]
path = "../boa_interner"
features = ["fuzzer"]
