[package]
name = "boa_interner"
description = "String interner for the Boa JavaScript engine."
keywords = ["javascript", "js", "string", "interner"]
categories = ["data-structures"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
fuzz = ["arbitrary"]

[dependencies]
boa_macros.workspace = true
serde = { version = "1.0.147", features = ["derive"], optional = true }
phf = { version = "0.11.1", features = ["macros"] }
rustc-hash = "1.1.0"
static_assertions = "1.1.0"
once_cell = "1.16.0"
indexmap = "1.9.1"
arbitrary = { version = "1", optional = true, features = ["derive"] }
