[package]
name = "boa_interner"
description = "String interner for the Boa JavaScript engine."
keywords = ["javascript", "js", "string", "interner"]
categories = ["data-structures", "no-std"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
default = ["std"]
std = ["once_cell/std"]

[dependencies]
boa_macros.workspace = true
boa_gc.workspace = true
phf = { workspace = true, default-features = false, features = ["macros"] }
rustc-hash = { workspace = true, default-features = false }
static_assertions.workspace = true
once_cell = { workspace = true, default-features = false, features = ["critical-section"]}
indexmap.workspace = true
serde = { workspace = true, features = ["derive"], optional = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
hashbrown = { workspace = true, default-features = false, features = ["inline-more"] }
