[package]
name = "boa_macros"
description = "Macros for the Boa JavaScript engine."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
quote = "1.0.29"
syn = { version = "2.0.23", features = ["full"] }
proc-macro2 = "1.0"
synstructure = "0.13"
