[package]
name = "boa_parser"
description = "ECMAScript parser for the Boa JavaScript engine."
keywords = ["javascript", "js", "syntax", "parser"]
categories = ["parser-implementations", "compilers"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
annex-b = []
temporal = ["boa_ast/temporal"]

[dependencies]
boa_interner.workspace = true
boa_macros.workspace = true
boa_ast.workspace = true
boa_profiler.workspace = true
rustc-hash = { workspace = true, features = ["std"] }
fast-float.workspace = true
num-traits.workspace = true
bitflags.workspace = true
num-bigint.workspace = true
regress.workspace = true
icu_properties.workspace = true

[features]
annex-b = []
