[package]
name = "boa_parser"
description = "ECMAScript parser for the Boa JavaScript engine."
keywords = ["javascript", "js", "syntax", "parser"]
categories = ["parser-implementations", "compilers"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_interner.workspace = true
boa_macros.workspace = true
boa_ast.workspace = true
boa_profiler.workspace = true
rustc-hash = "1.1.0"
fast-float = "0.2.0"
num-traits = "0.2.16"
bitflags = "2.4.0"
num-bigint = "0.4.4"
regress = "0.7.1"
icu_properties = "1.3.0"

[features]
annex-b = []
