[package]
name = "boa_profiler"
version = "0.15.0"
edition = "2021"
rust-version = "1.60"
authors = ["boa-dev"]
description = "Profiler used in Boa."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "js", "compiler", "profiler"]
categories = ["development-tools::profiling"]
license = "Unlicense/MIT"

[features]
profiler = ["measureme", "once_cell"]

[dependencies]
measureme = { version = "10.1.0", optional = true }
once_cell = { version = "1.13.0", optional = true }
