[package]
name = "boa_profiler"
description = "Profiler for the Boa JavaScript engine."
keywords = ["javascript", "js", "compiler", "profiler"]
categories = ["development-tools::profiling"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
profiler = ["measureme", "once_cell"]

[dependencies]
measureme = { version = "10.1.0", optional = true }
once_cell = { version = "1.16.0", optional = true }
