[package]
name = "boa_profiler"
description = "Profiler for the Boa JavaScript engine."
keywords = ["javascript", "js", "compiler", "profiler"]
categories = ["development-tools::profiling"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
profiler = ["dep:measureme", "dep:once_cell", "dep:rustc-hash"]

[dependencies]
measureme = { version = "10.1.1", optional = true }
once_cell = { workspace = true, optional = true, features = ["std"] }
rustc-hash = { workspace = true, optional = true }
