[package]
name = "boa_runtime"
description = "Example runtime for the Boa JavaScript engine."
keywords = ["javascript", "js", "runtime"]
categories = ["command-line-utilities"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine.workspace = true
boa_gc.workspace = true
rustc-hash = { workspace = true, features = ["std"] }

[dev-dependencies]
indoc.workspace = true
textwrap.workspace = true
