[package]
name = "boa_unicode"
version = "0.15.0"
edition = "2021"
rust-version = "1.60"
authors = ["boa-dev"]
description = "Unicode support for the Boa JavaScript engine."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "compiler", "lexer", "parser", "unicode"]
categories = ["parsing"]
license = "Unlicense/MIT"

[dependencies]
unicode-general-category = "0.6.0"
