[package]
name = "boa_unicode"
description = "Unicode support for the Boa JavaScript engine."
keywords = ["javascript", "compiler", "lexer", "parser", "unicode"]
categories = ["parsing"]
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
unicode-general-category = "0.6.0"
