[package]
name = "boa_unicode"
description = "DEPRECATED. Use the icu_properties crate instead."
keywords = ["javascript", "compiler", "lexer", "parser", "unicode"]
categories = ["parsing", "no-std"]
version = "0.16.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
unicode-general-category = "0.6.0"
