[package]
name = "boa_wasm"
description = "WASM compatibility layer for the Boa JavaScript engine."
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
categories = ["parser-implementations", "wasm", "compilers"]
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine.workspace = true
wasm-bindgen = "0.2.86"
getrandom = { version = "0.2.9", features = ["js"] }
chrono = { version = "0.4.26", features = ["clock", "std", "wasmbind"] }

[features]
default = ["boa_engine/annex-b"]

[lib]
crate-type = ["cdylib", "lib"]
name = "boa_wasm"
bench = false
