[package]
name = "boa_wasm"
description = "WASM compatibility layer for the Boa JavaScript engine."
keywords = ["javascript", "compiler", "lexer", "parser", "js"]
categories = ["parser-implementations", "wasm", "compilers"]
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine.workspace = true
wasm-bindgen = "0.2.87"
getrandom = { version = "0.2.10", features = ["js"] }
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "wasmbind"] }
console_error_panic_hook = "0.1.7"

[features]
default = ["boa_engine/annex-b"]

[lib]
crate-type = ["cdylib", "lib"]
name = "boa_wasm"
bench = false
