[package]
name = "boa_cli"
keywords = ["javascript", "compiler", "js", "cli"]
categories = ["command-line-utilities"]
default-run = "boa"
description.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
boa_engine = { workspace = true, features = ["deser", "flowgraph", "trace"] }
boa_parser.workspace = true
boa_gc.workspace = true
boa_runtime.workspace = true
rustyline = { workspace = true, features = ["derive", "with-file-history"] }
clap = { workspace = true, features = ["derive"] }
serde_json.workspace = true
colored.workspace = true
regex.workspace = true
phf = { workspace = true, features = ["macros"] }
pollster.workspace = true
dhat = { workspace = true, optional = true }
color-eyre.workspace = true
cow-utils.workspace = true

[features]
default = ["boa_engine/annex-b", "boa_engine/experimental", "boa_engine/intl_bundled"]
dhat = ["dep:dhat"]
mimalloc = ["dep:mimalloc-safe"]

[target.x86_64-unknown-linux-gnu.dependencies]
jemallocator.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mimalloc-safe = { workspace = true, optional = true, features = ["skip_collect_on_exit"] }

[[bin]]
name = "boa"
doc = false
path = "src/main.rs"

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
