[package]
name = "tester"
version = "0.1.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
Boa = { path = "../boa" }
structopt = "0.3.15"
serde = "1.0.114"
serde_yaml = "0.8.13"
bitflags = "1.2.1"
regex = "1.3.9"
once_cell = "1.4.0"
colored = "2.0.0"
fxhash = "0.2.1"
