[package]
name = "boa_tester"
version = "0.9.0"
authors = ["Iban Eguia Moraza <razican@protonmail.ch>"]
description = "Boa is a Javascript lexer, parser and Just-in-Time compiler written in Rust. Currently, it has support for some of the language."
repository = "https://github.com/boa-dev/boa"
keywords = ["javascript", "compiler", "test262", "tester", "js"]
categories = ["parser-implementations", "wasm"]
license = "Unlicense/MIT"
exclude = ["../.vscode/*", "../Dockerfile", "../Makefile", "../.editorConfig"]
edition = "2018"

[dependencies]
Boa = { path = "../boa" }
structopt = "0.3.18"
serde = { version = "1.0.116", features = ["derive"] }
serde_yaml = "0.8.13"
serde_json = "1.0.57"
bitflags = "1.2.1"
regex = "1.3.9"
once_cell = "1.4.1"
colored = "2.0.0"
fxhash = "0.2.1"
