# This file is a hack to make `cargo-fuzz` recognize the `fuzz` directory as
# a fuzz target.

[package]
name = "tests"
publish = false
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true
